--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+	<link rel="stylesheet" href="./error.css" />
+    <link rel="stylesheet" href="./login.css" />
+    <title>Login</title>
 </head>
 <body>
-    <div id="board" class="board">
-        
-    </div>
+    <header>
+      ChessPlus
+    </header>
+
+    
+	<div class="error">
+		<div>Not Found!</div>
+	</div>
+    
     <script src="./jQueryCDN/jquery-3.4.1.min.js"></script>
-    <script src="./code.js"></script>
+
 </body>
 </html>
