--- a/views/game.ejs
+++ b/views/game.ejs
@@ -4,17 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script>
         myColor = "<%= user.color %>";
         username = "<%= user.username %>";
+        opponent = "<%= opponent[0] %>";
         room = "<%= gameNumber %>";
+        console.log(opponent);
     </script>
     <script src="./socket.io.js"></script>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./gameUsers.css" />
     <title>Document</title>
 </head>
 <body>
     
+    <div class="me" id="me">
+        <%= user.username %>
+        <i class="fa fa-check" aria-hidden="true"></i>
+    </div>
+
+    <div class="opponent" id="opponent">
+        waiting for opponent
+        <i class="fa fa-spinner" aria-hidden="true"></i>
+    </div>
+
     <div id="board" class="board">
     </div>
 
