--- a/public/gameUsers.css
+++ b/public/gameUsers.css
@@ -14,11 +14,10 @@
 }
 
 
-div.me , div.opponent {
+div.me , div.opponent , div.room {
     background-color : white;
     color : black;
     position : absolute;
-    left : 0;
     margin : 0.5em;
     padding : 0.5em 1em;
     font-family : UbuntuBold;
@@ -27,11 +26,13 @@ div.me , div.opponent {
 
 div.me {
     bottom : 0;
+    left : 0;
 }
 
 
 div.opponent {
     top : 0;
+    left : 0;
 }
 
 i.fa-check {
@@ -49,4 +50,12 @@ i.fa-spinner{
     100% {
         transform : rotate(360deg);
     }
+}
+
+
+
+
+div.room {
+    right : 0;
+    top : 0;
 }
