--- a/views/game.ejs
+++ b/views/game.ejs
@@ -8,10 +8,21 @@
     <script>
         myColor = "<%= user.color %>";
         username = "<%= user.username %>";
-        opponent = "<%= opponent[0] %>";
         room = "<%= gameNumber %>";
-        console.log(opponent);
+        
     </script>
+    <% if ( opponent != undefined ) { %>
+      <script>
+            opponent = "<%= opponent.username %>";
+            console.log(opponent);
+      </script>
+    <% } else { %>
+        <script>
+              opponent = undefined;
+              console.log(opponent);
+        </script>
+      <% } %>
+    
     <script src="./socket.io.js"></script>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./gameUsers.css" />
@@ -27,6 +38,10 @@
     <div class="opponent" id="opponent">
         waiting for opponent
         <i class="fa fa-spinner" aria-hidden="true"></i>
+    </div>
+
+    <div class="room">
+        game : <%= gameNumber %>
     </div>
 
     <div id="board" class="board">
