load chess board on refresh

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -9,7 +9,9 @@
         myColor = "<%= user.color %>";
         username = "<%= user.username %>";
         room = "<%= gameNumber %>";
-        
+        //boardLoadFromServer = "<%= board %>";
+        //chessBoard = "<%= board %>";
+		//boardLoadFromServer = JSON.parse(boardLoadFromServer);
     </script>
     <% if ( opponent != undefined ) { %>
       <script>
