fix yourTurn on refresh

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -9,6 +9,7 @@
         myColor = "<%= user.color %>";
         username = "<%= user.username %>";
         room = "<%= gameNumber %>";
+		turn = "<%= turn %>";
         //boardLoadFromServer = "<%= board %>";
         //chessBoard = "<%= board %>";
 		//boardLoadFromServer = JSON.parse(boardLoadFromServer);
